# aiBerlinFactory

./: .gitignore  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json
apps/backend/: .env.example  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  data.py  main.py  models.py
apps/backend/app/agents/: __init__.py  finance.py  hiring.py  legal.py  ops.py
apps/backend/app/services/: __init__.py  ai.py  cap_table.py  chat.py  documents.py  jobs.py  narrative.py  orchestrator.py  overview.py
apps/backend/app/tests/: __init__.py  test_agents.py  test_ai.py  test_api_lifecycle.py  test_jobs.py
apps/frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/dashboard/[jobId]/: page.tsx
apps/frontend/src/app/start/: page.tsx
apps/frontend/src/components/: agent-link-modal.tsx  dashboard-chat.tsx  dashboard-shell.tsx  onboarding-form.tsx  results-tabs.tsx  war-room.tsx
apps/frontend/src/lib/: api.ts  client-id.ts  types.ts
docs/: local-setup.md  personas.md
scripts/: dev.sh
